# api/swagger/swagger.yaml
@@ -19,17 +19,6 @@ produces:
   - application/json
 paths:
   /withdrawal/{cash}:
-    options:
-      responses:
-        default:
-          description: CORS headers for all operations
-          headers:
-            Access-Control-Allow-Origin:
-              type: string
-              default: https://caixaeletronico-frontend.herokuapp.com
-            Access-Control-Allow-Headers:
-              type: string
-              default: X-UA-Compatible, X-XSS-Protection
     x-swagger-router-controller: atm
     get:
       description: Returns your cash
@@ -52,18 +41,7 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-  /deposit/{cash}:
-    options:
-      responses:
-        default:
-          description: CORS headers for all operations
-          headers:
-            Access-Control-Allow-Origin:
-              type: string
-              default: https://caixaeletronico-frontend.herokuapp.com
-            Access-Control-Allow-Headers:
-              type: string
-              default: X-UA-Compatible, X-XSS-Protection
+  /deposit/{cash}:    
     x-swagger-router-controller: atm
     post:
       description: Deposit your cash
